# alnPairDist

./: Dockerfile  LICENSE  README.md  aln.pairwise.similarity.tsv  pyproject.toml
alnPairDist/: __init__.py  __main__.py  alnPairDist.py
alnPairDist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
alnPairDist/alnPairDist/: alnPairDist.py
example/: example.aln
